; ModuleID = '/home/carl/AnghaBench/obs-studio/libobs/media-io/extr_video-scaler-ffmpeg.c_get_ffmpeg_scale_type.c'
source_filename = "/home/carl/AnghaBench/obs-studio/libobs/media-io/extr_video-scaler-ffmpeg.c_get_ffmpeg_scale_type.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SWS_FAST_BILINEAR = common dso_local global i32 0, align 4
@SWS_POINT = common dso_local global i32 0, align 4
@SWS_BILINEAR = common dso_local global i32 0, align 4
@SWS_AREA = common dso_local global i32 0, align 4
@SWS_BICUBIC = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @get_ffmpeg_scale_type to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @get_ffmpeg_scale_type(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  switch i32 %4, label %17 [
    i32 130, label %5
    i32 128, label %7
    i32 129, label %9
    i32 131, label %11
    i32 132, label %15
  ]

5:                                                ; preds = %1
  %6 = load i32, i32* @SWS_FAST_BILINEAR, align 4
  store i32 %6, i32* %2, align 4
  br label %19

7:                                                ; preds = %1
  %8 = load i32, i32* @SWS_POINT, align 4
  store i32 %8, i32* %2, align 4
  br label %19

9:                                                ; preds = %1
  %10 = load i32, i32* @SWS_FAST_BILINEAR, align 4
  store i32 %10, i32* %2, align 4
  br label %19

11:                                               ; preds = %1
  %12 = load i32, i32* @SWS_BILINEAR, align 4
  %13 = load i32, i32* @SWS_AREA, align 4
  %14 = or i32 %12, %13
  store i32 %14, i32* %2, align 4
  br label %19

15:                                               ; preds = %1
  %16 = load i32, i32* @SWS_BICUBIC, align 4
  store i32 %16, i32* %2, align 4
  br label %19

17:                                               ; preds = %1
  %18 = load i32, i32* @SWS_POINT, align 4
  store i32 %18, i32* %2, align 4
  br label %19

19:                                               ; preds = %17, %15, %11, %9, %7, %5
  %20 = load i32, i32* %2, align 4
  ret i32 %20
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
